--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "compile:sass": "node-sass src/sass/main.scss src/css/style.css -w"
+    "compile:sass": "node-sass src/sass/main.scss src/css/style.css -w",
+    "dev": "npm-run-all -p -r start compile:sass"
   },
   "eslintConfig": {
     "extends": "react-app"
