--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "compile:sass": "node-sass src/sass/main.scss src/css/style.css -w",
-    "dev": "npm-run-all -p -r start compile:sass"
+    "dev": "npm-run-all -p -r start compile:sass",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
