--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "3.4.0"
   },
   "devDependencies": {
+    "concat": "^1.0.3",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5"
@@ -21,9 +22,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "dev": "npm-run-all -p -r start watch:sass",
     "watch:sass": "node-sass src/sass/main.scss src/css/style.css -w",
     "compile:sass": "node-sass src/sass/main.scss src/css/style.comp.css",
-    "dev": "npm-run-all -p -r start watch:sass",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
