--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "3.4.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.0.1",
     "concat": "^1.0.3",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
