--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "concat": "^1.0.3",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
