--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "concat:css": "concat -o ./src/css/style.concat.css ./src/css/icon-font.css ./src/css/style.comp.css",
     "prefix:css": "postcss ./src/css/style.concat.css --use autoprefixer -o ./src/css/style.prefix.css",
     "compress:css": "node-sass ./src/css/style.prefix.css ./src/css/style.css --output-style compressed",
-    "build:css": "nom-run-all compile:sass concat:css prefix:css compress:css",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
